fix: spacing issue for title

--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,10 @@ footer {
     font-size: 2.25rem;
   }
 
+  .title {
+    margin-top: 1rem;
+  }
+
   .cards-container {
     flex-direction: row;
   }
